# bq-langgraph-analysis-agent

./: .env.example  .gitignore  README.md  example.md  pyproject.toml
docs/: ARCHITECTURE.md  GOOGLE_CLOUD_SETUP.md
src/: __init__.py  agent.py  bq_client.py  cli.py  config.py  llm_client.py  main.py  metrics.py  schema_cache.py  state.py  verbose.py
src/nodes/: __init__.py  analyzer.py  executor.py  planner.py  responder.py  router.py  sql_generator.py
tests/integration/: __init__.py  test_agent_flow.py  test_conversation.py
tests/property/: __init__.py  test_cli.py  test_config.py  test_error_handling.py  test_rate_limit.py  test_sql_generation.py  test_state.py  test_state_graph.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_schema_cache.py
tests/unit/nodes/: test_analyzer.py  test_executor.py  test_planner.py  test_responder.py  test_router.py  test_sql_generator.py
