[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "A CLI-based conversational AI agent for analyzing e-commerce data from Google BigQuery"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.5",
    "langchain>=1.1.0",
    "langchain-core>=1.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=1.0.0",
    "google-cloud-bigquery>=3.13.0",
    "pandas>=2.0.0",
    "db-dtypes==1.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
